--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@astrojs/solid-js": "^4.0.1",
     "@koibumi-design/solidjs": "^0.0.8",
     "astro": "^4.5.2",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "solid-js": "^1.8.16",
     "typescript": "^5.4.2"
   }
