--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/solid-js": "^4.0.1",
-    "@koibumi-design/solidjs": "^0.0.8",
-    "astro": "^4.5.2",
+    "astro": "4.16.1",
+    "clsx": "^2.1.1",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "solid-js": "^1.8.16",
